<resources>
    <string name="app_name">InventoryApp</string>
    <string name="insert_test_data">Insert test data</string>
    <string name="empty_list">There are no books for display right now.</string>
    <string name="empty_list_resolution">Please add some!</string>
    <string name="delete_all_books">Delete all books</string>
    <string name="delete_this_book">Delete this book</string>
    <string name="title_activity_editor">EditorActivity</string>
    <string name="unknown_supplier">Unknown Supplier</string>
    <string name="unknown_supplier_phone_number">Unknown phone number</string>
    <string name="editor_activity_title_new_book">Insert a book</string>
    <string name="editor_activity_title_edit_book">Edit a book</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="action_save">Save</string>
    <string name="delete_dialog_msg">Are you sure that you want to delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_insertion_failed">Error saving the product</string>
    <string name="editor_insertion_successful">Product saved successfully</string>
    <string name="editor_update_failed">Error updating the product</string>
    <string name="editor_update_successful">Product updated successfully</string>
    <string name="editor_deletion_successful">Product successfully deleted.</string>
    <string name="editor_deletion_failed">Error deleting product.</string>
    <string name="dummy_product_name">The Spook\'s Apprentice</string>
    <string name="dummy_supplier_name">Peter Parker</string>
    <string name="dummy_supplier_phone_number">+3592212352</string>
    <string name="edit_required_fields">Please fill in the required fields</string>
    <string name="inventory_activity">InventoryActivity</string>
    <string name="rows_deleted">rows deleted from pet database</string>
    <string name="edit_valid_data">Please insert valid price and quantity for the product.</string>
    <string name="sell_item">Sell 1</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="product_name">Product Name</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone_number">Supplier Phone Number</string>
    <string name="call">CALL</string>
    <string name="subtract_image_button">Subtract</string>
    <string name="add_image_button">Add</string>
</resources>
